# RustExercises

./: README.md
borrowing/: borrowing.rs
conditionals/: calculator.rs  conditionals.rs
custom-types/: structs-enums-contants.rs
hyper-microservice/: Cargo.toml  README.md
hyper-microservice/src/: main.rs
loops/: factorials.rs  loops.rs  triangle.rs
primitives/: literals-operators.rs  primitives.rs  tuples-arrays.rs
print-formatting/: debugging.rs  display-struct.rs  print-formatting.rs
